# testbenchcpp

./: CMakeLists.txt  LICENSE  README.md
include/: something.h
src/: CMakeLists.txt  something.cpp
tests/: CMakeLists.txt  benchmark.cpp  tests.cpp
